--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,6 +23,10 @@ body .wrap {
   z-index: 10;
 }
 
+h1{
+ display: contents;
+}
+
 .header-logo {
   width: 19.324%;
   padding: 1.283vw 0 0 1.89vw;
