--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,6 +5,8 @@
   text-decoration: none;
 }
 
+/*トップページ*/
+
 body {
   width: 100%;
 }
@@ -13,6 +15,7 @@ body .wrap {
   overflow: hidden;
 }
 
+/*ヘッダー*/
 .header {
   position: fixed;
   top: 0px;
@@ -107,6 +110,8 @@ h1{
   }
 }
 
+/*メインビジュアル*/
+
 .main-visual {
   width: 100%;
   height: 0;
@@ -172,6 +177,8 @@ h1{
   }
 }
 
+/*news*/
+
 .news {
   width: 100%;
 }
@@ -225,6 +232,8 @@ h1{
     margin-top: 29px;
   }
 }
+
+/*メッセージ*/
 
 .baker-message {
   width: 100%;
@@ -334,6 +343,8 @@ h1{
     line-height: 20px;
   }
 }
+
+/*ランキング*/
 
 .ranking {
   width: 100%;
@@ -478,6 +489,8 @@ h1{
   }
 }
 
+/*全国配送*/
+
 .delivery {
   width: 100%;
 }
@@ -621,6 +634,8 @@ h1{
   }
 }
 
+/*よくある質問*/
+
 .faq {
   width: 100%;
 }
@@ -707,6 +722,8 @@ h1{
     display: none;
   }
 }
+
+/*フッター*/
 
 .footer {
   width: 100%;
@@ -828,6 +845,7 @@ h1{
 }
 
 /*ここから商品一覧ページ*/
+
 .menu-body {
   background-color: #D9C09F;
   font-family: "游ゴシック  Medium", "Yu Gothic Medium";
@@ -1019,6 +1037,7 @@ h1{
 }
 
 /*ここからお取り寄せページ*/
+
 .shopping-wrapper {
   width: 100%;
   padding-top: 220px;
@@ -1167,6 +1186,7 @@ h1{
 }
 
 /*ここから当店についてページ*/
+
 .aboutus-wrapper {
   width: 100%;
   background-color: #D9C09F;
@@ -1287,7 +1307,7 @@ h1{
 }
 
 .txt-container .contents-txt {
-  font-size: 2.027vw;
+  font-size: 2vw;
   text-align: left;
   padding-top: 2.7vw;
 }
@@ -1320,6 +1340,7 @@ h1{
 }
 
 /*ここからお問い合わせページ*/
+
 .contact-wrapper {
   width: 100%;
 }
